// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled prop 1`] = `
<input
  className="sc-cSHVUG bIHuMg"
  disabled={true}
/>
`;

exports[`renders correctly with inValid prop 1`] = `
<input
  className="sc-cSHVUG knwvgd"
/>
`;

exports[`renders correctly with no props 1`] = `
<input
  className="sc-cSHVUG lgpRmM"
/>
`;

exports[`renders correctly with valid prop 1`] = `
<input
  className="sc-cSHVUG gAZCWO"
/>
`;
